--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "numpy (>=2.4.1,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
-    "uvicorn (>=0.40.0,<0.41.0)"
+    "uvicorn (>=0.40.0,<0.41.0)",
+    "redis (>=7.1.0,<8.0.0)"
 ]
 
 [tool.poetry]
